--- a/Pulumi.yaml
+++ b/Pulumi.yaml
@@ -1,10 +1,20 @@
 name: quickstart
 runtime: yaml
 description: A minimal AWS Pulumi YAML program
-outputs:
-  # Export the name of the bucket
-  bucketName: ${my-bucket.id}
+
 resources:
   # Create an AWS resource (S3 Bucket)
   my-bucket:
     type: aws:s3:Bucket
+
+  # Create an S3 Bucket object
+  index.html:
+    type: aws:s3:BucketObject
+    properties:
+      bucket: ${my-bucket}
+      source:
+        fn::fileAsset: ./index.html
+
+outputs:
+  # Export the name of the bucket
+  bucketName: ${my-bucket.id}
